# anemoi-plugins-ecmwf

./: .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  README.md
.github/: CODEOWNERS  labeler.yml
.github/workflows/: pr-label-conventional-commits.yml  pr-label-file-based.yml  python-publish.yml  python-pull-request.yml  release-please.yml
inference/: CHANGELOG.md  README.md  pyproject.toml
inference/src/anemoi/plugins/ecmwf/inference/compute_tv/: README.md  __init__.py  compute_tv.py
inference/src/anemoi/plugins/ecmwf/inference/dynamics/: README.md  __init__.py  _operate_on_fields.py  array_overlay.py  modify_value.py  regression_perturbation.py  steady_state.py  subtract_mean_tendency.py  subtract_tendency.py
inference/src/anemoi/plugins/ecmwf/inference/fdb_plus/: README.md  __init__.py  fdb_plus.py  pre_processor.py
inference/src/anemoi/plugins/ecmwf/inference/mir_templates/: README.md  mir_templates.py
inference/src/anemoi/plugins/ecmwf/inference/multio/: README.md  archive.py  multio_output.py
inference/src/anemoi/plugins/ecmwf/inference/opendata/: __init__.py  geopotential_height.py  opendata.py
inference/src/anemoi/plugins/ecmwf/inference/polytope/: polytope.py
inference/src/anemoi/plugins/ecmwf/inference/regrid/: README.md  __init__.py  regrid.py
inference/src/anemoi/plugins/ecmwf/inference/regrid/named/: __init__.py
inference/src/anemoi/plugins/ecmwf/inference/regrid/named/meps/: NOTE.md  latitudes.npz  longitudes.npz
inference/tests/: conftest.py
inference/tests/compute_tv/: test_compute_tv.py
inference/tests/dynamics/: test_modify_value.py  test_regression_perturbation.py  test_steady_state.py  test_subtract_tendency.py
inference/tests/multio/: test_hdate.py  test_metadata.py  test_multio.py  test_plugin.py
inference/tests/multio/configs/: multio.yaml  simple.yaml
inference/tests/opendata/: test_mapping.py  test_plugin.py
inference/tests/polytope/: test_plugin.py
inference/tests/regrid/: test_named.py  test_regrid.py
plugins/inference/mir-templates/: README.md  pyproject.toml
plugins/inference/mir-templates/src/anemoi_inference_grib_templates_mir/: __init__.py  mir_templates.py
plugins/inference/mir-templates/tests/: test_plugin.py  test_template.py
plugins/inference/multio/: CHANGELOG.md  README.md  pyproject.toml
plugins/inference/multio/plans/: debug.yaml  to_file.yaml
plugins/inference/multio/src/anemoi_inference_output_multio/: __init__.py  multio_output.py
plugins/inference/multio/tests/: test_server_called.py
plugins/inference/polytope/: CHANGELOG.md  pyproject.toml
plugins/inference/polytope/.github/workflows/: python-pull-request.yml
plugins/inference/polytope/src/anemoi_inference_input_polytope/: __init__.py
plugins/inference/polytope/tests/: test_plugin.py
transform/: CHANGELOG.md  README.md  pyproject.toml
transform/src/anemoi/plugins/ecmwf/transform/: __init__.py  utils.py
transform/src/anemoi/plugins/ecmwf/transform/regrid/: __init__.py  backend.py  regrid.py
transform/src/anemoi/plugins/ecmwf/transform/spectral/: __init__.py  sh_to_gg.py  utils.py  vordiv_to_uv.py
transform/src/anemoi/plugins/ecmwf/transform/spectral/backends/: __init__.py  base.py  ctrans.py  ectrans.py  mir.py
transform/src/anemoi/plugins/ecmwf/transform/virtual_temperature/: README.md  __init__.py  virtual_temperature.py
transform/src/anemoi/plugins/ecmwf/transform/vordiv_to_uv/: __init__.py  backends.py  utils.py  vordiv_to_uv.py
transform/tests/: conftest.py  test_parallel_decode.py  test_vordiv_to_uv.py
transform/tests/regrid/: test_backend.py  test_mir_regrid.py  test_regrid.py
transform/tests/spectral/: conftest.py  test_mir_backend.py  test_sh_to_gg.py  test_vordiv_to_uv.py
transform/tests/virtual_temperature/: test_virtual_temperature.py
transform/tests/vordiv_to_uv/: test_vordiv_to_uv.py
